@@ -162,7 +162,3 @@
 - use NADataDef to automatically generate schemas
   in data/nautilus-actions.schemas.in
   and in src/utils/nautilus-actions-schemas
-
-- dnd to inside of a menu, by dropping while on the menu itself
-  if menu is at path 3, we get a dest of 3:0 which means first child of parent at path 3
-  if menu is new (never has been written), dnd says that parent is not writable ????
